CSS, scrollbar fixes and google tags

--- a/src/styles/Navbar.css
+++ b/src/styles/Navbar.css
@@ -7,7 +7,7 @@ header {
   background-color: transparent /* var(--site-background-color) */;
   /* box-shadow: rgba(0, 0, 0, 0.1) 0px 10px 15px -3px,
     rgba(0, 0, 0, 0.05) 0px 4px 6px -2px; */
-  z-index: 999;
+  z-index: 4;
   padding: 0 6em;
   box-sizing: border-box;
   gap: 4.4em;
